Created Pair, Updated ServerProcess
Implemented Pair class and modified the ServerProcess class based on the pair class.